Corrections mineures
Services :
La clé du properties est le nom du Provider plutôt que le nom de l'algorithme
CryptoManager : Récupération du constructeur par défaut avant le newInstance plutôt que le newInstance sur l'instance de Class car deprecated